# isnad

./: .coderabbit.yaml  .eslintrc.json  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  next.config.mjs  package.json  prettier.config.js  pyproject.toml  sql-ts.config.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
.chat/: 01_most_basic_page.json  02_nodes_layout.json  03_more_network_tweaks.json
.devcontainer/: devcontainer.json  post-start.sh
.github/workflows/: bun-test.yml  checks.yml  deploy.yml  links.yml  pre-commit.yml
app/: globals.css  layout.tsx  narrators.tsx  page.tsx
app/about/: page.tsx
app/components/: background-pattern.tsx  error-boundary.tsx  footer.tsx  hadith-selector.tsx  hadith-text-card.tsx  hadith-transmission-chain.tsx  navbar.tsx  (+3 more)
components/: Footer.tsx  brutalist-card.tsx  chapter-list.tsx  chapter-page.tsx  error-boundary.tsx  footer.tsx  hadith-card.tsx  hadith-explanation-card.tsx  hadith-list.tsx  hadith-text-card.tsx  loading-spinner.tsx  narrator-card.tsx  narrator-grid.tsx  narrator-summary.tsx  navbar.tsx  network-graph.tsx  network-workspace.css  network-workspace.tsx  predecessors-successors-chain.tsx  teacher-student-chain.tsx  transmission-chain.tsx  virtualized-chapter-list.tsx  virtualized-list.tsx  virtualized-narrator-list.tsx
data/: matched_hadiths.csv  place_translations.json  scrape.py  unmatched_hadiths.csv
hooks/: use-hadith-virtualizer.ts
lib/: arabic-utils.ts  book-mapping.ts  constants.ts  grade-mapping.ts  layout-constants.ts  metadata-utils.ts  neo4j.ts  schemas.ts  search-utils.ts  sqlite.ts  utils.ts  validation-utils.ts
scripts/: download-plugin.sh  entrypoint.sh  export_hadiths_json.py  gen_db.py  gen_images.py  gen_search_index.py  get_book_titles.sql  init-db.cypher  map_data.py  query.ts  scrape.py  seed.sh  sources.py
seed/: nodes.txt
tests/: sqlite.test.ts
types/: database.ts  graph-config.ts
(+34 files in other folders)
