[project]
name = "isnad"
version = "0.1.0"
description = "Data preprocessing for Isnad"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "poethepoet>=0.32.2",
    "polars>=1.21.0",
    "pre-commit>=4.1.0",
    "pyarrow>=19.0.0",
    "rapidfuzz>=3.12.1",
    "requests>=2.32.3",
]

[tool.poe.tasks]
gen-db = { script = "scripts.gen_db:main", help = "Generate database from CSV files" }
pre-commit = { shell = "pre-commit run", help = "Run pre-commit checks" }
