[project]
name = "isnad"
version = "0.1.0"
description = "Data preprocessing for Isnad"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arabic-reshaper>=3.0.0",
    "beautifulsoup4>=4.13.3",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "poethepoet>=0.32.2",
    "polars>=1.21.0",
    "pre-commit>=4.1.0",
    "pyarrow>=19.0.0",
    "python-bidi>=0.6.6",
    "rapidfuzz>=3.12.1",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[tool.poe.tasks]
gen-db = { script = "scripts.gen_db:main", help = "Generate database from CSV files" }
gen-images = { script = "scripts.gen_images:main", help = "Generate OG images from database" }
pre-commit = { shell = "pre-commit run --all-files", help = "Run pre-commit checks" }
